--- a/app/src/main/res/layout/teachersignup.xml
+++ b/app/src/main/res/layout/teachersignup.xml
@@ -10,23 +10,52 @@
         android:layout_height="wrap_content"
         android:text="Submit Your Information"
         android:layout_gravity="center_horizontal"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:textStyle="bold"/>
+
     <EditText
+        android:id="@+id/teacherName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter Name"
         android:layout_marginTop="10dp"
         android:ems="25"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_gravity="center_horizontal"/>
     <EditText
+        android:id="@+id/teacherid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/teacherid"
         android:layout_marginTop="10dp"
         android:hint="Id"
         android:ems="15"
         android:layout_gravity="center_horizontal"/>
+    <EditText
+        android:id="@+id/teacherSub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Subject"
+        android:ems="15"
+        android:layout_gravity="center_horizontal"/>
+    <EditText
+        android:id="@+id/teacherClass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Class"
+        android:ems="10"
+        android:layout_gravity="center_horizontal"/>
+    <EditText
+        android:id="@+id/teacherSec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Section"
+        android:ems="10"
+        android:layout_gravity="center_horizontal"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
