--- a/app/src/main/res/layout/student_report_list_view.xml
+++ b/app/src/main/res/layout/student_report_list_view.xml
@@ -118,6 +118,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Name"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
+
+        <TextView
             android:id="@+id/nameTOP"
             android:layout_width="0dp"
             android:layout_weight="1"
