--- a/app/src/main/res/layout/row_list_student_info.xml
+++ b/app/src/main/res/layout/row_list_student_info.xml
@@ -13,6 +13,7 @@
             android:id="@+id/nameTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
             android:layout_weight="2"
             android:text="name"/>
         <TextView
