--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#cddc39"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -23,6 +24,7 @@
             android:layout_weight="1"
             android:textOff="SMS OFF"
             android:textOn="SMS ON"
+            android:layout_marginRight="16dp"
             android:id="@+id/absentOnBTN"/>
 
     </LinearLayout>
@@ -44,8 +46,38 @@
             android:layout_weight="1"
             android:textOff="SMS OFF"
             android:textOn="SMS ON"
+            android:layout_marginRight="16dp"
             android:id="@+id/presentOnBTN"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/csvDown"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Downlod CSV"
+            android:textColor="#000"
+            android:layout_weight="2" />
+
+        <Button
+            android:id="@+id/downCSV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#827717"
+            android:textColor="#bd000000"
+            android:textStyle="bold"
+            android:layout_marginRight="8dp"
+            android:text="Download"
+            android:onClick="downCSV"/>
+
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
