--- a/app/src/main/res/layout/student_info_list_view.xml
+++ b/app/src/main/res/layout/student_info_list_view.xml
@@ -112,9 +112,6 @@
 
 
 
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,20 +123,23 @@
             android:layout_height="wrap_content"
             android:text="Name"
             android:textSize="17sp"
+            android:layout_marginLeft="4dp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/rollTOP"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Roll"
+            android:layout_gravity="center_horizontal"
             android:textSize="17sp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/verdictTOP"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="8dp"
             android:text="Verdict"
             android:textSize="17sp"
             android:textStyle="bold"/>
