--- a/app/src/main/res/layout/studentinfromation.xml
+++ b/app/src/main/res/layout/studentinfromation.xml
@@ -2,36 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="#cddc39"
+    android:gravity="center_vertical"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit Student Info"
+        android:layout_gravity="center_horizontal"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/nameET"
         android:hint="Enter Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="20"
-        />
+        android:ems="25"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_gravity="center_horizontal"/>
     <EditText
         android:id="@+id/rollET"
         android:hint="Enter roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:ems="16"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_gravity="center_horizontal"/>
     <EditText
         android:id="@+id/phnnumET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter Phone Number"
-        android:ems="11"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="14"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="submit"
         android:background="#827717"
         android:textColor="#bd000000"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         android:onClick="addContact"/>
 
