--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -16,6 +16,9 @@
             android:layout_height="wrap_content"
             android:textColor="#000"
             android:layout_weight="1"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
+            android:textSize="20sp"
             android:text="Absent : SMS"/>
 
         <Switch
@@ -24,10 +27,21 @@
             android:layout_weight="1"
             android:textOff="SMS OFF"
             android:textOn="SMS ON"
+            android:layout_marginTop="16dp"
+            android:paddingRight="24dp"
             android:layout_marginRight="16dp"
             android:id="@+id/absentOnBTN"/>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_height="2dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="#78000000"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -38,6 +52,9 @@
             android:layout_height="wrap_content"
             android:textColor="#000"
             android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:textSize="20sp"
             android:text="Present : SMS"/>
 
         <Switch
@@ -46,10 +63,20 @@
             android:layout_weight="1"
             android:textOff="SMS OFF"
             android:textOn="SMS ON"
+            android:layout_marginTop="8dp"
+            android:paddingRight="24dp"
             android:layout_marginRight="16dp"
             android:id="@+id/presentOnBTN"/>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_height="2dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="#78000000"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,6 +88,9 @@
             android:layout_height="wrap_content"
             android:text="Downlod CSV"
             android:textColor="#000"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="8dp"
+            android:textSize="20sp"
             android:layout_weight="2" />
 
         <Button
@@ -71,12 +101,53 @@
             android:background="#827717"
             android:textColor="#bd000000"
             android:textStyle="bold"
+            android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
             android:text="Download"
             android:onClick="downCSV"/>
 
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_height="2dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="#78000000"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/reportD"
+            android:layout_width="0dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="8dp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:text="Delete Report"
+            android:textColor="#000"
+            android:layout_weight="2" />
+
+        <Button
+            android:id="@+id/reportDelete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="4dp"
+            android:background="#827717"
+            android:textColor="#bd000000"
+            android:textStyle="bold"
+            android:layout_marginRight="8dp"
+            android:text="Delete"
+            android:onClick="reportDelete"/>
+
+
+    </LinearLayout>
+
 
 
 
