--- a/app/src/main/res/layout/student_report_list_view.xml
+++ b/app/src/main/res/layout/student_report_list_view.xml
@@ -123,6 +123,7 @@
             android:layout_weight="1"
             android:text="Name"
             android:textSize="17sp"
+            android:layout_marginLeft="8dp"
             android:textStyle="bold"/>
 
         <TextView
@@ -146,6 +147,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:paddingLeft="12dp"
             android:text="Verdict"
             android:textSize="17sp"
             android:textStyle="bold"/>
