--- a/app/src/main/res/layout/teacherlogin.xml
+++ b/app/src/main/res/layout/teacherlogin.xml
@@ -22,6 +22,14 @@
         android:layout_gravity="center_horizontal"
         android:onClick="loginBTN"
         android:text="login"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="32dp"
+        android:layout_height="2dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="#78000000"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
