--- a/app/src/main/res/layout/row_list_student_info.xml
+++ b/app/src/main/res/layout/row_list_student_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:background="#cddc39"
+    android:background="#433e3e3e"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -9,48 +9,64 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nameTV"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_weight="3"
-            android:text="name"/>
-        <TextView
-            android:layout_marginLeft="95dp"
-            android:id="@+id/rollTV"
-            android:layout_width="0dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/nameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:lines="4"
+                android:singleLine="false"
+                android:maxLines="6"
+                android:textColor="#000"
+                android:text="name"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_marginLeft="30dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="roll"/>
-        <TextView
-            android:id="@+id/numberTV"
-            android:layout_width="wrap_content"
-            android:visibility="gone"
-            android:layout_height="wrap_content" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/rollTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="#000"
+                android:text="roll"/>
+
+            <TextView
+                android:id="@+id/numberTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+
+                />
+            <TextView
+                android:id="@+id/present"
+                android:text="P"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#bd000000"
+                android:textStyle="bold"
+                android:onClick="presentBTN"/>
+            <TextView
+                android:id="@+id/absent"
+                android:text="Absent"
+                android:layout_marginLeft="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#bd000000"
+                android:textStyle="bold"
+                android:onClick="absentBTN" />
+        </LinearLayout>
 
     </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/present"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="P"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:textColor="#bd000000"
-        android:onClick="presentBTN"/>
-    <TextView
-        android:id="@+id/absent"
-        android:text="A"
-        android:layout_marginLeft="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#bd000000"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:onClick="absentBTN" />
+
 
 
 </LinearLayout>
