--- a/app/src/main/res/layout/row_list_student_report.xml
+++ b/app/src/main/res/layout/row_list_student_report.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:background="#cddc39"
+    android:background="#433e3e3e"
     android:layout_height="match_parent">
 
     <TextView
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="8dp"
+        android:textColor="#000"
         android:text="name"/>
 
     <TextView
@@ -18,12 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingLeft="12dp"
+        android:textColor="#000"
         android:text="roll"/>
     <TextView
         android:id="@+id/dateTV"
         android:layout_width="0dp"
         android:layout_weight="2"
         android:paddingRight="8dp"
+        android:textColor="#000"
         android:layout_height="wrap_content"
         android:text="date"/>
     <TextView
@@ -31,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:text="Verdict"/>
 
 
