--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#cddc39"
+    android:background="#433e3e3e"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -98,8 +98,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#827717"
-            android:textColor="#bd000000"
+            android:background="#bd000000"
+            android:textColor="#e86837"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
@@ -138,8 +138,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="4dp"
-            android:background="#827717"
-            android:textColor="#bd000000"
+            android:background="#bd000000"
+            android:textColor="#e86837"
             android:textStyle="bold"
             android:layout_marginRight="8dp"
             android:text="Delete"
