--- a/app/src/main/res/layout/student_info_list_view.xml
+++ b/app/src/main/res/layout/student_info_list_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
-    android:background="#cddc39"
+    android:layout_width="match_parent"
+    android:background="#433e3e3e"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
@@ -110,39 +110,41 @@
 
     </RelativeLayout>
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/nameTOP"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textSize="17sp"
-            android:layout_marginLeft="4dp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/rollTOP"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Roll"
-            android:layout_gravity="center_horizontal"
-            android:textSize="17sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/verdictTOP"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="8dp"
-            android:text="Verdict"
-            android:textSize="17sp"
-            android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/nameTOP"
+                android:layout_width="wrap_content"
+                android:layout_weight="0.50"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Name"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/rollTOP"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Roll"
+                android:paddingRight="45dp"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/verdictTOP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginRight="8dp"
+                android:paddingRight="40dp"
+                android:text="Verdict"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
+
 
     </LinearLayout>
     <View
