--- a/app/src/main/res/layout/teacherlogin.xml
+++ b/app/src/main/res/layout/teacherlogin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#cddc39"
+    android:background="#433e3e3e"
     android:layout_height="match_parent">
 
     <ImageView
@@ -35,8 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/loginBTN"
-        android:background="#827717"
-        android:textColor="#bd000000"
+        android:background="#bd000000"
+        android:textColor="#e86837"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
