--- a/app/src/main/res/layout/teachersignup.xml
+++ b/app/src/main/res/layout/teachersignup.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cddc39"
+    android:background="#433e3e3e"
     android:gravity="center_vertical">
 
     <TextView
@@ -61,8 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="SignUp"
-        android:background="#827717"
-        android:textColor="#bd000000"
+        android:background="#bd000000"
+        android:textColor="#e86837"
         android:textStyle="bold"
         android:onClick="signUp"
         android:layout_gravity="center_horizontal"/>
